--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<script src="assets/main.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Intro to Js</title>
+</head>
+<body>
+    <h1>Hello World</h1>
+        <div id="write">
+            <label for="name">
+                <input type="text" id="name">
+                <button type="button" onclick="display()">Click Me</button>
+            </label>
+        </div>
+<script src="./assets/main.js"></script>
+</body>
+</html>
