--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="write">
           <form>
             <label for="fname">Enter your name...</label>
-                <input type="text" id="fname" name="name"></br>
+                <input type="text" id="fname" name="fname"></br>
                 <button type="button" onclick="display()">click me</button>
             </form>
         </div>
